--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 <div class="container">
     <div class="row">
         <div class="col-8 offset-2">
-            <h1>Responsive charts</h1>
-
+            <h1>Audible charts</h1>
+            <div>
+                Press space to play a series, left and right to step along the timeline, up and down to switch between series
+            </div>
             <div id="container" style="height: 400px"></div>
         </div>
     </div>
