--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="col-8 offset-2">
             <h1>Audible charts</h1>
             <div>
-                Press space to play a series, left and right to step along the timeline, up and down to switch between series
+                Press left and right to step along the timeline, up and down to switch between series, space to speak a data point
             </div>
             <div id="container" style="height: 400px"></div>
         </div>
