--- a/chart2.html
+++ b/chart2.html
@@ -31,11 +31,11 @@
 
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="index.html">Chart 1 <span class="sr-only">(current)</span></a>
-        </li>
         <li class="nav-item">
-            <a class="nav-link" href="chart2.html">Chart 2 </a>
+            <a class="nav-link" href="index.html">Chart 1 </a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="chart2.html">Chart 2 <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="chart3.html">Chart 3 </a>
@@ -82,7 +82,7 @@
 
 <script>
     var data = {
-        title: 'Chart 1',
+        title: 'Chart 2',
         x_label: 'Month',
         y_label: 'Billion pounds per year',
         categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
