--- a/chart5.html
+++ b/chart5.html
@@ -31,8 +31,8 @@
 
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="index.html">Chart 1 <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+            <a class="nav-link" href="index.html">Chart 1 </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="chart2.html">Chart 2 </a>
@@ -43,8 +43,8 @@
         <li class="nav-item">
             <a class="nav-link" href="chart4.html">Chart 4 </a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="chart5.html">Chart 5 </a>
+        <li class="nav-item active">
+            <a class="nav-link" href="chart5.html">Chart 5 <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="chart6.html">Chart 6 </a>
@@ -82,7 +82,7 @@
 
 <script>
     var data = {
-        title: 'Chart 1',
+        title: 'Chart 5',
         x_label: 'Month',
         y_label: 'Billion pounds per year',
         categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
