--- a/chart2.html
+++ b/chart2.html
@@ -82,16 +82,13 @@
 
 <script>
     var data = {
-        title: 'Chart 2',
-        x_label: 'Month',
-        y_label: 'Billion pounds per year',
-        categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+        title: 'Median duration of marriage that end in divorce, 1963 to 2014',
+        x_label: 'Year',
+        y_label: 'Median duration of marriage',
+        categories: ["1973","1974","1975","1976","1977","1978","1979","1980","1981","1982","1983","1984","1985","1986","1987","1988","1989","1990","1991","1992","1993"],
         series:  [{
-            name: 'g.d.p.',
-            data: [29.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
-        },{
-            name: 'c.p.r.',
-            data: [129.9, 121.5, 106.4, 89.2, 74.0, 46.0, 85.6, 98.5, 108.4, 78.1, 70.6, 60.4]
+            name: 'Marriage length',
+            data: [11.3,10.9,10.6,10.5,10.4,10.4,10.2,10.1,10.1,10.1,10.1,10.1,8.9,9.4,9.5,9.7,9.7,9.8,9.8,9.9,9.8]
         }]
     }
     var settings = {
@@ -100,6 +97,7 @@
 
     $(document).ready(setupAudibleChart(data, settings));
 </script>
+
 
 
 <footer>
