--- a/index.html
+++ b/index.html
@@ -82,16 +82,13 @@
 
 <script>
     var data = {
-        title: 'Chart 1',
-        x_label: 'Month',
-        y_label: 'Billion pounds per year',
-        categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+        title: 'Divorce rates for women - 1960 to 1980',
+        x_label: 'Year',
+        y_label: 'Divorces per 1000 married women',
+        categories: ["1960","1961","1962","1963","1964","1965","1966","1967","1968","1969","1970","1971","1972","1973","1974","1975","1976","1977","1978","1979","1980"],
         series:  [{
-            name: 'g.d.p.',
-            data: [29.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
-        },{
-            name: 'c.p.r.',
-            data: [129.9, 121.5, 106.4, 89.2, 74.0, 46.0, 85.6, 98.5, 108.4, 78.1, 70.6, 60.4]
+            name: 'Divorce rate',
+            data: [2, 2.1, 2.4, 2.7, 2.9, 3.1, 3.2, 3.5, 3.7, 4.1, 4.7, 5.9, 9.4, 8.4, 9, 9.6, 10.1, 10.3, 11.6, 11.2, 12]
         }]
     }
     var settings = {
