--- a/chart3.html
+++ b/chart3.html
@@ -82,16 +82,13 @@
 
 <script>
     var data = {
-        title: 'Chart 3',
-        x_label: 'Month',
-        y_label: 'Billion pounds per year',
-        categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+        title: 'Estimates of crime in England and Wales - 2001 to 2015',
+        x_label: 'Year',
+        y_label: 'Crimes (estimated)',
+        categories: [2001,2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2012,2013,2014,2015],
         series:  [{
-            name: 'g.d.p.',
-            data: [29.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
-        },{
-            name: 'c.p.r.',
-            data: [129.9, 121.5, 106.4, 89.2, 74.0, 46.0, 85.6, 98.5, 108.4, 78.1, 70.6, 60.4]
+            name: 'Crime excluding fraud',
+            data: [12366,12018,11417,10550,10581,10942,9842,10283,9344,9446,9345,8487,7318,6567,6228]
         }]
     }
     var settings = {
